[feature 162755087] fix gap between links and navbar

--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,6 @@ body {
 .navbar a:hover {
   background-color: #0277bd;
   color: #fff;
-  padding: 20px;
 }
 
 .dropdown-content {
@@ -137,7 +136,7 @@ header.topbar {
   background-color: #f5f5f5;
   position: fixed;
   width: 100%;
-  height: 60px;
+  /* height: 60px; */
   top: 0;
   left: 0;
 }
